package com.denior.parasol.utils

enum class UvRiskLevel {
    LOW,
    MODERATE,
    HIGH,
    VERY_HIGH,
    EXTREMELY_HIGH
}